# ankaaa

./: .replit  FEATURES.md  INSTALLATION.md  QUICK_START.md  README.md  USER_GUIDE.md  app.py  pyproject.toml  requirements.txt
.config/.semgrep/: settings.yml
.streamlit/: config.toml
attached_assets/: Pasted-Building-a-website-or-smart-tool-Legal-AI-Assistant-that-users-can-interact-with-to-understand-and-1746544447977.txt  Pasted-google-api-core-exceptions-NotFound-404-models-gemini-pro-is-not-found-for-API-version-v1beta-or-i-1746545674725.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-button-elements-with-the-same-auto--1746545447514.txt
components/: article_summarizer.py  case_analyzer.py  document_creator.py  document_qa.py  law_comparison.py
utils/: document_processor.py  image_generator.py  llm_manager.py  openai_manager.py  pdf_generator.py  speech_to_text.py  vector_store.py
